<resources>
    <string name="app_name">FormularioCondominio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastramento">cadastramento</string>
    <string name="consulta_por_c_digo">consulta por código</string>
    <string name="listar_todos">listar todos</string>
    <string name="exclus_o">exclusão</string>
    <string name="altera_o_de_dados">alteração de dados</string>
    <string name="hello_second_frag">hello_second_frag</string>
    <string name="digite_uma_id">Digite uma ID</string>
    <string name="digite_um_nome">Digite um nome</string>
    <string name="digite_o_valor_da_mensalidade">Digite o valor da mensalidade</string>
    <string name="digite_o_debito_total">Digite o debito total</string>
    <string name="digite_o_telefone">Digite o telefone</string>
    <string name="consult"> consult</string>
    <string name="menu_cadastrar"> create</string>
    <string name="delete"> delete</string>
    <string name="edite"> edite</string>
    <string name="voltar_tela_1">voltar_tela_1</string>
    <string name="creditos">Creditos</string>
    <string name="tela_de_inicio">Tela de inicio</string>
    <string name="autores_gustavo_arildo_e_leonardo_da_silva">Autores: Gustavo Arildo e Leonardo da Silva</string>
    <string name="autores_gustavo_arildo_e_leonardo_da_silva_ntrabalho_3_pdm">Autores Gustavo Arildo e Leonardo da Silva \nTrabalho 3 PDM</string>
    <string name="id_cadastrato_automaticamente">ID é cadastrato automaticamente</string>
    <string name="autores_gustavo_arildo_e_leonardo_da_silva_ntrabalho_4_pdm">Autores Gustavo Arildo e Leonardo da Silva \nTrabalho 4 PDM</string>
</resources>
