<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/id_cadastrato_automaticamente"
        app:layout_constraintBottom_toBottomOf="@+id/button_first"
        app:layout_constraintEnd_toStartOf="@+id/button_first" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Identificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_uma_id"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_um_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editText_Identificacao"
        app:layout_constraintTop_toBottomOf="@+id/editText_Identificacao" />

    <EditText
        android:id="@+id/editText_Mensalidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_o_valor_da_mensalidade"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editText_Telefone"
        app:layout_constraintTop_toBottomOf="@+id/editText_Telefone" />

    <EditText
        android:id="@+id/editText_DebitoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/digite_o_debito_total"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editText_Mensalidade"
        app:layout_constraintTop_toBottomOf="@+id/editText_Mensalidade"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_Telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_o_telefone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editText_Nome"
        app:layout_constraintTop_toBottomOf="@+id/editText_Nome" />

</androidx.constraintlayout.widget.ConstraintLayout>